# sharpdetect

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.dnlib.txt  LICENSE.md  README.md  SharpDetect.sln  THIRD-PARTY-NOTICES.md
src/SharpDetect.Profiler/: .gitignore  Assembly.cs  AssemblyRefProps.cs  CMakeLists.txt  CorProfilerCallback.cs  Instrumentation.cs  InstrumentationContext.cs  KnownGuids.cs  LICENSE.txt  MessageFactory.cs  Method.cs  Module.cs  SharpDetect.Profiler.csproj  SharpDetect.Profiler.sln  conanfile.py
src/SharpDetect.Profiler/Abstractions/: ASSEMBLYMETADATA.cs  COR_DEBUG_IL_TO_NATIVE_MAP.cs  COR_FIELD_OFFSET.cs  COR_PRF_CODE_INFO.cs  COR_PRF_ELT_INFO.cs  COR_PRF_EX_CLAUSE_INFO.cs  COR_PRF_FRAME_INFO.cs  COR_PRF_FUNCTION_ARGUMENT_INFO.cs  COR_PRF_FUNCTION_ARGUMENT_RANGE.cs  COR_PRF_GC_GENERATION_RANGE.cs  COR_SECATTR.cs  CorILMap.cs  CoreDebugILToNativeMap.cs  HResult.cs
src/SharpDetect.Profiler/Bootstrap/: ClassFactory.cs  EntryPoint.cs
src/SharpDetect.Profiler/Communication/: ICommunicationWorker.cs  MessagingClient.cs  NotificationsWorker.cs  RelayWorkerBase.cs  RequestsWorker.cs  ResponsesWorker.cs  SignalsWorker.cs
src/SharpDetect.Profiler/CppInterfaces/: IClassFactory.cs  ICorProfilerCallback.cs  ICorProfilerCallback2.cs  ICorProfilerInfo.cs  ICorProfilerInfo2.cs  ICorProfilerInfo3.cs  ICorProfilerInfo4.cs  IMetaDataAssemblyEmit.cs  IMetaDataAssemblyImport.cs  IMetaDataEmit.cs  IMetaDataEmit2.cs  IMetaDataImport.cs  IMetaDataImport2.cs  IMethodAlloc.cs  IUnknown.cs
src/SharpDetect.Profiler/Hooks/: AsmUtilities.Linux.cs  AsmUtilities.Windows.cs  AsmUtilities.cs  MethodHooks.cs
src/SharpDetect.Profiler/LibDescriptors/: ArgumentTypeDescriptor.cpp  CMakeLists.txt  CapturedArgumentDescriptor.h  CapturedValueDescriptor.h  Configuration.cpp  Configuration.h  MethodInjectionDescriptor.cpp  MethodInjectionDescriptor.h  MethodRewritingDescriptor.cpp  MethodRewritingDescriptor.h  MethodVersionDescriptor.cpp  MethodVersionDescriptor.h  TypeInjectionDescriptor.cpp
src/SharpDetect.Profiler/LibIL/: CMakeLists.txt  ILRewriter.cpp  InjectedMethods.h  Instrumentation.cpp  Instrumentation.h  MetadataAnalysis.h
src/SharpDetect.Profiler/LibIPC/: CMakeLists.txt  Client.cpp  Client.h  CommandDispatcher.cpp  CommandDispatcher.h  EventDispatcher.cpp  EventDispatcher.h  EventLane.h  EventSink.h  IpqConsumer.cpp  IpqConsumer.h  IpqLibrary.cpp  IpqLibrary.h  IpqProducer.cpp  IpqProducer.h  LaneRegistry.cpp  LaneRegistry.h  Messages.cpp  Messages.h  OptionalMsgpack.h  OverflowBuffer.cpp  OverflowBuffer.h  QueueEndpoint.h  Semaphore.cpp  Semaphore.h
src/SharpDetect.Profiler/LibIPC.Tests/: CMakeLists.txt  EventDispatcherTests.cpp  EventLaneTests.cpp  TestMain.cpp
src/SharpDetect.Profiler/LibMetadata/: AssemblyDef.h  CMakeLists.txt  ModuleDef.cpp  ModuleDef.h  TypeClassification.cpp  TypeClassification.h
src/SharpDetect.Profiler/LibProfiler/: AssemblyDef.cpp  AssemblyDef.h  AssemblyRef.h  CMakeLists.txt  ClassFactory.h  Code.h  ComPtr.h  CorProfilerBase.cpp  CorProfilerBase.h  FlowControl.h  GarbageCollectionContext.cpp  GarbageCollectionContext.h  ILRewriter.cpp  ILRewriter.h  Instruction.cpp  Instruction.h  Instrumentation.cpp  Instrumentation.h  MetadataAnalysis.cpp  MetadataAnalysis.h  MethodBodyHelpers.cpp  MethodBodyHelpers.h  ModuleDef.cpp  ModuleDef.h  ObjectsTracker.cpp  ObjectsTracker.h  OpCode.h  OpCodeType.h  OpCodes.cpp  OpCodes.h  Operand.h  OperandType.h  PAL.cpp  PAL.h  SignatureUtils.cpp  SignatureUtils.h  StackBehaviour.h  StackWalker.cpp  StackWalker.h  TrackedObjectId.h  (+4 more)
src/SharpDetect.Profiler/LibProfilerCore/: CMakeLists.txt  GarbageCollectionContext.h  ObjectsTracker.cpp  ObjectsTracker.h  PAL.h  StackWalker.cpp  StackWalker.h  TrackedObjectId.h  asmHelpers.S  asmHelpers.arm64.S
src/SharpDetect.Profiler/Logging/: ConsoleSink.cs  FileSink.cs  ILoggerSink.cs  LogLevel.cs  Logger.cs
src/SharpDetect.Profiler/Profiler/: CMakeLists.txt  CapturedValueDescriptor.h  CapturedValueFlags.h  CorProfiler.cpp  HashingUtils.h  MethodSignatureDescriptor.cpp  MethodSignatureDescriptor.h
src/SharpDetect.Profiler/Properties/: AssemblyInfo.cs
src/SharpDetect.Profiler/Scripts/: publish-linux-x64-aot-debug.sh  publish-linux-x64-aot-release.sh  publish-win-x64-aot-release.cmd
src/SharpDetect.Profiler/SharpDetect.Concurrency.Profiler/: ArgumentCapture.cpp  ArgumentCapture.h  ArgumentTypeDescriptor.cpp  ArgumentTypeDescriptor.h  CMakeLists.txt  CapturedArgumentDescriptor.h  CapturedValueDescriptor.h  CapturedValueFlags.h  Configuration.cpp  Configuration.h  CorProfiler.cpp  CorProfiler.h  HashingUtils.h  MetadataStore.cpp  MetadataStore.h  MethodDescriptor.cpp  MethodDescriptor.h  MethodDescriptorRegistry.cpp  MethodDescriptorRegistry.h  MethodInjectionDescriptor.cpp  MethodRewritingDescriptor.cpp  MethodRewritingDescriptor.h  MethodSignatureDescriptor.cpp  MethodSignatureDescriptor.h  MethodVersionDescriptor.cpp  MethodVersionDescriptor.h  RewriteRegistry.cpp  RewriteRegistry.h  TypeInjectionDescriptor.h  TypeInjector.cpp  TypeInjector.h  dllmain.cpp
src/SharpDetect.Profiler/SharpDetect.Disposables.Profiler/: CMakeLists.txt  Configuration.cpp  Configuration.h  ConfigurationAdditionalData.cpp  ConfigurationAdditionalData.h  CorProfiler.cpp  CorProfiler.h  MethodDescriptor.cpp  MethodDescriptor.h  MethodHookInfo.h  Profiler.def  TypeDescriptor.cpp  TypeDescriptor.h  dllmain.cpp
src/SharpDetect.Profiler/SharpDetect.Profiler/: CMakeLists.txt  CapturedArgumentDescriptor.h  CorProfiler.cpp  CorProfiler.h  HashingUtils.h  MethodDescriptor.cpp  MethodDescriptor.h  MethodRewritingDescriptor.cpp  MethodRewritingDescriptor.h  RecordedEventType.h  asmHelpers.S  asmHelpers.asm  dllmain.cpp
src/SharpDetect.Profiler/cmake/: compiler_options.cmake  json.cmake  loguru.cmake  msgpack.cmake
src/SharpDetect.Profiler/src/: CComPtr.h  ClassFactory.cpp  ClassFactory.h  Client.cpp  Client.h  ClrProfiler.def  CorProfiler.cpp  CorProfiler.h  CorProfilerBase.cpp  CorProfilerBase.h  EasyLogging.cpp  EasyLogging.h  GlobalHooks.h  (+29 more)
(+1361 files in other folders)
